tests/integration/security/test_artifacts/security-ae75b8a2494145f8974590/TestMutualTlsOrigination/invalid_client_cert/_test_context/DestinationRule.3640512763.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-fake-mtls-credential-a
spec:
  host: "external.external-4-11206.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          credentialName: fake-mtls-credential-a
          sni: external.external-4-11206.svc.cluster.local
